fix: footer invisible - trial 8

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -19,7 +19,7 @@
   justify-content: center;   /* zentriert die Gruppen */
   gap: 5rem;                 /* Abstand zwischen den Gruppen */
   padding: 2rem;             /* Abstand zum Rand */
-  flex: 1;                   /* füllt vertikal den Raum zwischen Header und Footer */
+  /*flex: 1;*/                   /* füllt vertikal den Raum zwischen Header und Footer */
 }
 
 .spacer {
